# EvoKB

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_GUIDE.md  CLI.md  DEPLOYMENT.md  Dockerfile  EVOKB_SCHEMA.md  LICENSE  PRIVACY.md  QUICKSTART.md  README.md  autoreview.sh  config.yaml  docker-compose.yml  evokb_cli.py  librarian.py  program.md  pyproject.toml  requirements.txt  retriever.py  run_autoreview.py  setup.sh  test.sh  test_accuracy.py  utils.py
eval/: README.md  dashboard.html  metrics.json  report.md
evokb/: __init__.py  agent.py  api.py  cluster.py  config.py  context.py  retriever.py  router.py  schema_evolution.py  scraper.py  search.py  utils.py
raw/: Activity-Stream_Engineering__Capturing_the_Pulse_o.md  Agentic_Engineering__Building_AI_Systems_That_Act.md  Beyond_the_Hype__A_Founder_s_Guide_to_Practical_AI.md  Causal_Integrity__Counterfactual_Reasoning.md  Causal_Reasoning_for_AI_Agents__Beyond_Vector_Simi.md  Context_Engineering__The_Art_of_Giving_AI_What_It_.md  Data_Engineering_Fundamentals_for_AI__Building_the.md  Enterprise_Context_Layer__Stitching_AI_Context_Acr.md  From_Vision_toValue.md  Geospatial_Intelligence__From_Drone_to_Dashboard.md  Hardening_Agentic_Systems__From_Demo_to_Enterprise.md  KV_Cache_Optimization__Scaling_LLM_Inference_Witho.md  Knowledge_Graph_Engineering__Structuring_Knowledge.md  LLM_Coding_Workflow__From_Text_to_Software.md  Legal_Information.md  Ontology_Engineering__The_Logic_of_World-Modeling.md  OurPhilosophy.md  Playbooks__Frameworks.md  Precedent_Engineering__Teaching_Agents_the__Why__B.md  Search_code__repositories__users__issues__pull_req.md  Semantic_Continuity__Bridging_Connectivity_and_Str.md  Strategic_Model_Selection__Winning_with_Medium_Mod.md  The_Dual-Engine_Architecture.md  The_Engineering_Manifesto__Rigor_Over_Hype.md  The__Thin_Slice__MVP__Shipping_Value_in_30_Days.md  Untitled.md  ai-notes.md  (+2 more)
(+96 files in other folders)
