[project]
name = "evokb"
version = "0.1.0"
description = "Self-evolving Markdown knowledge base with autoresearch-style LLM librarian"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["evokb*"]

dependencies = [
    "litellm>=1.0",
    "ollama",
    "python-frontmatter",
    "watchdog",
    "markdown",
    "duckdb",
    "langgraph",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
evokb = "evokb.librarian:main"
