[project]
name = "evokb"
version = "0.1.0"
description = "Self-evolving Markdown knowledge base with autoresearch-style LLM librarian"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "litellm>=1.0",
    "ollama",
    "python-frontmatter",
    "watchdog",
    "markdown",
    "duckdb",
    "langgraph",
    "tqdm",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "requests",
    "beautifulsoup4",
    "tantivy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
evokb = "evokb.librarian:main"
evokb-api = "evokb.api:app"
